test_migration_output_4.txt
============================= test session starts =============================
platform win32 -- Python 3.12.1, pytest-9.0.1, pluggy-1.6.0 -- C:\Users\pablo\AppData\Local\Programs\Python\Python312\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\pablo\Movistar Cloud\Gravity\blurtpy
configfile: pytest.ini
collecting ... collected 0 items / 2 errors

=================================== ERRORS ====================================
____________ ERROR collecting tests/blurtpy/test_account_blurt.py _____________
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\blurtpy\test_account_blurt.py:7: in <module>
    from blurtpy import Blurt, exceptions, Blurt
blurtpy\__init__.py:2: in <module>
    from .blurt import Blurt
blurtpy\blurt.py:13: in <module>
    from .utils import formatTime, resolve_authorperm, derive_permlink, sanitize_permlink, remove_from_dict, addTzInfo, formatToTimeStamp
E     File "C:\Users\pablo\Movistar Cloud\Gravity\blurtpy\blurtpy\utils.py", line 73
E       return datetime.fromtimestamp(timenow.time(, timezone.utc) + int(secs)).strftime(timeFormat)
E                                                  ^
E   SyntaxError: invalid syntax
____________ ERROR collecting tests/blurtpy/test_account_blurt.py _____________
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\..\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\blurtpy\test_account_blurt.py:7: in <module>
    from blurtpy import Blurt, exceptions, Blurt
blurtpy\__init__.py:2: in <module>
    from .blurt import Blurt
blurtpy\blurt.py:13: in <module>
    from .utils import formatTime, resolve_authorperm, derive_permlink, sanitize_permlink, remove_from_dict, addTzInfo, formatToTimeStamp
E     File "C:\Users\pablo\Movistar Cloud\Gravity\blurtpy\blurtpy\utils.py", line 73
E       return datetime.fromtimestamp(timenow.time(, timezone.utc) + int(secs)).strftime(timeFormat)
E                                                  ^
E   SyntaxError: invalid syntax
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!
============================== 2 errors in 0.38s ==============================
